--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"framer-motion": "^12.31.0",
 		"lucide-react": "^0.563.0",
 		"next": "16.1.5",
+		"next-themes": "^0.4.6",
 		"react": "19.1.5",
 		"react-dom": "19.1.5",
 		"sonner": "^2.0.7",
